# Chaufa

./: CMakeLists.txt
cmake/: chaufaConfig.cmake.in
include/: Chaufa.h
src/: CMakeLists.txt  Chaufa.c
