find_package(Vulkan REQUIRED)

add_library(${PROJECT_NAME} 
	"${CMAKE_SOURCE_DIR}/include/Chaufa.h"
	Chaufa.c
)

target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan User32)

target_include_directories(${PROJECT_NAME}
	PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:include>	
	PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}/src
)

install(TARGETS ${PROJECT_NAME}
	EXPORT chaufaTargets
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)