find_package(Vulkan REQUIRED)

add_library(${PROJECT_NAME} 
	"../include/Chaufa.h"
	Chaufa.c
)

target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan User32)

target_include_directories(${PROJECT_NAME}
	PUBLIC
		$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
	PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}
)

install(TARGETS ${PROJECT_NAME}
	EXPORT chaufaTargets
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)